<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
        
    <TextView 
        android:text="@string/action_bar_title"
        android:textSize="16dp"
        android:textColor="#000000"
		android:layout_width="fill_parent"
		android:layout_height="48dp"
		android:padding="10dp"
		android:background="#aa0000" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:layout_weight="1" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello2"
        android:layout_weight="9" />

<LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="48dp" 
        android:orientation="horizontal"
        android:background="#aa0000" >
                
        <TextView 
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="4"
			android:background="#aa0000" />

        <TextView 
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:background="#aa0000" />
        
        <TextView 
            android:text="@string/nav_prev"
        	android:textSize="16dp"
        	android:textColor="#ffffff"            
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:paddingTop="10dp"
			android:background="#aa0000" />
                
        <TextView 
			android:text="@string/space_cheat"
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1"			
			android:background="#aa0000" />
        
        <TextView 
            android:text="@string/nav_next"
        	android:textSize="16dp"
        	android:textColor="#ffffff"			
			android:layout_width="wrap_content"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:paddingTop="10dp"
			android:background="#aa0000" />
        
        </LinearLayout>
    
</LinearLayout>